attempt to patch image vertical stretching issue with align-self fix

--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ img {
 	border-style: solid;
 	border-width: 0.5vw;
 	border-radius: 1vw;
+	align-self: center;
 }
 
 @media (max-width: 500px) {
